--- a/src/static/sass/_searchkit.scss
+++ b/src/static/sass/_searchkit.scss
@@ -55,6 +55,8 @@
 
 .tag {
 	font-size: 100% !important;
+	display: inline-block !important;
+	margin: 0px 5px 5px 0px;
 }
 
 /* For the autocomplete stuff */
