--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -29,13 +29,14 @@
 
 	<script type="text/javascript" src="/static/js/playout/froogaloop.js"></script>
 
+	<script type="text/javascript" src="/static/jwplayer-7.5.0/jwplayer.js"></script>
+
 	<script src="/static/js/config.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
 	<script src="/static/public/assets/benglabs.js" type="text/javascript"></script>
 	<script>
 		clariah.cookRecipe({{ recipe|tojson|safe }}, 'app');
-
 	</script>
 
 </body>
