--- a/src/static/css/components.css
+++ b/src/static/css/components.css
@@ -9048,6 +9048,22 @@ h4, h5, h6 {
   background-color: #ddd;
 }
 
+/* line 1, ../sass/_player.scss */
+#timebar {
+  width: 100%;
+  height: 50px;
+  display: block;
+  position: relative;
+  margin-top: 10px;
+  background-color: black;
+  cursor: crosshair;
+}
+
+/* line 12, ../sass/_player.scss */
+.media-player img {
+  max-width: 100%;
+}
+
 /* line 1, ../sass/_bootstrap-vertical-nav.scss */
 .navbar {
   margin-bottom: 0px !important;
