--- a/src/static/sass/components.scss
+++ b/src/static/sass/components.scss
@@ -3,4 +3,5 @@
 @import "_variables.scss";
 @import "_home.scss";
 @import "_searchkit.scss";
+@import "_player.scss";
 @import "_bootstrap-vertical-nav.scss";
