--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -59,7 +59,6 @@
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('Collection analyser')">Collection analyser</a></li>
                                             <li><a href="#" onclick="showComponent('Collection selector')">Collection selector</a></li>
-                                            <li><a href="#" onclick="showComponent('Collection stats')">Collection stats</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -76,6 +75,18 @@
                                     </div>
                                 </li>
 
+                                <!-- Play-out components -->
+                                <li class="active">
+                                    <a href="#" data-toggle="collapse" data-target="#menu_stats" data-parent="#component_menu" class="collapsed">
+                                        <span class="glyphicon glyphicon-inbox"></span> Play-out <span class="caret pull-right"></span>
+                                    </a>
+                                    <div class="collapse in" id="menu_stats">
+                                        <ul class="nav nav-list">
+                                            <li><a href="#" onclick="showComponent('Annotation player')">Annotation player</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+
                                 <!-- Data visualisation components -->
                                 <li class="active">
                                     <a href="#" data-toggle="collapse" data-target="#menu_stats" data-parent="#component_menu" class="collapsed">
@@ -83,7 +94,7 @@
                                     </a>
                                     <div class="collapse in" id="menu_stats">
                                         <ul class="nav nav-list">
-                                            <li><a href="#" onclick="showComponent('Line chart')">Line chart</a></li>
+                                            <li><a href="#" onclick="showComponent('Line chart')">Line chart (TODO)</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -113,6 +124,11 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+
+<script type="text/javascript" src="/static/js/playout/froogaloop.js"></script>
+
+<script type="text/javascript" src="/static/jwplayer-7.5.0/jwplayer.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
