made the Vimeo & JW players separately usable and added them to the components page

--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -83,6 +83,8 @@
                                     <div class="collapse in" id="menu_stats">
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('Annotation player')">Annotation player</a></li>
+                                            <li><a href="#" onclick="showComponent('JWPlayer')">JWPlayer</a></li>
+                                            <li><a href="#" onclick="showComponent('Vimeo player')">Vimeo player</a></li>
                                         </ul>
                                     </div>
                                 </li>
