--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -136,7 +136,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
 
 <script src="/static/js/config.js"></script>
-<script src="/static/public/assets/benglabs.js"></script>
+<script src="/static/public/assets/benglabs.min.js"></script>
 <script type="text/babel" src="/static/js/labo-components.js"></script>
 
 </html>
