--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -97,7 +97,7 @@
                                     </a>
                                     <div class="collapse in" id="menu_playout">
                                         <ul class="nav nav-list">
-                                            <li><a href="#" onclick="showComponent('Annotation player')">Annotation player</a></li>
+                                            <li><a href="#" onclick="showComponent('Segmenting player')">Segmenting player</a></li>
                                             <li><a href="#" onclick="showComponent('JWPlayer')">JWPlayer</a></li>
                                             <li><a href="#" onclick="showComponent('Vimeo player')">Vimeo player</a></li>
                                         </ul>
