--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -100,6 +100,7 @@
                                             <li><a href="#" onclick="showComponent('Segmenting player')">Segmenting player</a></li>
                                             <li><a href="#" onclick="showComponent('JWPlayer')">JWPlayer</a></li>
                                             <li><a href="#" onclick="showComponent('Vimeo player')">Vimeo player</a></li>
+                                            <li><a href="#" onclick="showComponent('YouTube player')">YouTube player</a></li>
                                         </ul>
                                     </div>
                                 </li>
