the details page now generates the correct players for each media type and shows all metadata

--- a/src/static/css/components.css
+++ b/src/static/css/components.css
@@ -9049,7 +9049,7 @@ h4, h5, h6 {
 }
 
 /* line 1, ../sass/_player.scss */
-#timebar {
+.timebar {
   width: 100%;
   height: 50px;
   display: block;
