--- a/src/static/css/main-no-bootstrap.css
+++ b/src/static/css/main-no-bootstrap.css
@@ -256,7 +256,7 @@ h4, h5, h6 {
 }
 
 /* line 1, ../sass/_player.scss */
-#timebar {
+.timebar {
   width: 100%;
   height: 50px;
   display: block;
