--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -25,15 +25,24 @@
 		</div>
 	</div>
 
+	<!-- for the linechart component -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
+	<!-- for the player components-->
 	<script type="text/javascript" src="/static/js/playout/froogaloop.js"></script>
-
 	<script type="text/javascript" src="/static/jwplayer-7.5.0/jwplayer.js"></script>
 
+	<!-- for the image viewer -->
+	<script type="text/javascript" src="/static/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
+
+	<!-- The API config is required for the library to connect to compatible endpoints-->
 	<script src="/static/js/config.js" type="text/javascript"></script>
+
+	<!-- React is required for the entire library-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
+
+	<!-- The component library -->
 	<script src="/static/public/assets/benglabs.js" type="text/javascript"></script>
 	<script>
 		clariah.cookRecipe({{ recipe|tojson|safe }}, {{ params|tojson|safe }}, 'app');
