added simple overlay to image viewer which opens the annotation modal

--- a/src/static/css/components.css
+++ b/src/static/css/components.css
@@ -9064,6 +9064,14 @@ h4, h5, h6 {
   max-width: 100%;
 }
 
+/* line 17, ../sass/_player.scss */
+.image-overlay {
+  outline: 2px solid #444;
+  background-color: wheat;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
 /* line 1, ../sass/_bootstrap-vertical-nav.scss */
 .navbar {
   margin-bottom: 0px !important;
