--- a/src/static/sass/_player.scss
+++ b/src/static/sass/_player.scss
@@ -13,3 +13,10 @@
 		max-width:100%;
 	}
 }
+
+.image-overlay {
+	outline: 2px solid #444;
+	background-color:wheat;
+	opacity: 0.4;
+	cursor: pointer;
+}
