added support for tagging images. It is still only the visual aspect though. These areas are not yet properly save to the annotation API

--- a/src/static/sass/_player.scss
+++ b/src/static/sass/_player.scss
@@ -16,7 +16,9 @@
 
 .image-overlay {
 	outline: 2px solid #444;
-	background-color:wheat;
-	opacity: 0.4;
+	background-color:transparant;
 	cursor: pointer;
+	&.active {
+		outline: 2px solid crimson;
+	}
 }
