--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -29,11 +29,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
 	<!-- for the player components-->
-	<script type="text/javascript" src="/static/js/playout/froogaloop.js"></script>
-	<script type="text/javascript" src="/static/jwplayer-7.5.0/jwplayer.js"></script>
+	<script type="text/javascript" src="/static/vendor/vimeo/froogaloop.js"></script>
+	<script type="text/javascript" src="/static/vendor/jwplayer-7.5.0/jwplayer.js"></script>
 
 	<!-- for the image viewer -->
 	<script type="text/javascript" src="/static/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
+	<script type="text/javascript" src="/static/vendor/openseadragonselection-master/dist/openseadragonselection.js"></script>
 
 	<!-- The API config is required for the library to connect to compatible endpoints-->
 	<script src="/static/js/config.js" type="text/javascript"></script>
