--- a/src/templates/recipes.html
+++ b/src/templates/recipes.html
@@ -18,17 +18,19 @@
 
 		<div class="row">
 			{% for key in recipes.keys() %}
-			<div id="{{recipes[key].id}}" class="col-sm-6 col-md-4 api">
-				<div class="card">
-					<a href="/recipe/{{recipes[key].id}}">
-						<img src="/static/images/BG-tile.jpeg">
-					</a>
-					<div class="caption">
-						<h4 class="bengfont"><i class="fa fa-rocket"></i>&nbsp;{{recipes[key].name}}</h4>
-						<p>{{recipes[key].description}}</p>
+				{% if recipes[key].type == 'search' %}
+				<div id="{{recipes[key].id}}" class="col-sm-6 col-md-4 api">
+					<div class="card">
+						<a href="/recipe/{{recipes[key].id}}">
+							<img src="/static/images/BG-tile.jpeg">
+						</a>
+						<div class="caption">
+							<h4 class="bengfont"><i class="fa fa-rocket"></i>&nbsp;{{recipes[key].name}}</h4>
+							<p>{{recipes[key].description}}</p>
+						</div>
 					</div>
 				</div>
-			</div>
+				{% endif %}
 			{% endfor %}
 		</div>
 	</div>
