--- a/src/static/css/main-no-bootstrap.css
+++ b/src/static/css/main-no-bootstrap.css
@@ -274,7 +274,10 @@ h4, h5, h6 {
 /* line 17, ../sass/_player.scss */
 .image-overlay {
   outline: 2px solid #444;
-  background-color: wheat;
-  opacity: 0.4;
+  background-color: transparant;
   cursor: pointer;
+}
+/* line 21, ../sass/_player.scss */
+.image-overlay.active {
+  outline: 2px solid crimson;
 }
