added the imageviewer to the components page

--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -101,6 +101,7 @@
                                             <li><a href="#" onclick="showComponent('JWPlayer')">JWPlayer</a></li>
                                             <li><a href="#" onclick="showComponent('Vimeo player')">Vimeo player</a></li>
                                             <li><a href="#" onclick="showComponent('YouTube player')">YouTube player</a></li>
+                                            <li><a href="#" onclick="showComponent('Image viewer')">Image viewer</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -132,7 +133,7 @@
             </div>
 
             <div class="col-sm-9 col-md-10 affix-content">
-                <div id="component_x">
+                <div id="component_x" class="row">
 
                 </div>
             </div>
@@ -150,6 +151,7 @@
 
 <!-- for the image viewer -->
 <script type="text/javascript" src="/static/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
+<script type="text/javascript" src="/static/vendor/openseadragonselection-master/dist/openseadragonselection.js"></script>
 
 <!-- Babel is needed to parse the labo-components.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
