--- a/src/static/sass/_player.scss
+++ b/src/static/sass/_player.scss
@@ -15,10 +15,14 @@
 }
 
 .image-overlay {
-	outline: 2px solid #444;
-	background-color:transparant;
+	outline: 1px solid yellowchiffon;
+	box-shadow: 10px 10px 5px #888888;
+	padding:10px;
+	background-color: rgba(255,250,205, 0.2);
 	cursor: pointer;
 	&.active {
-		outline: 2px solid crimson;
+		outline: 1px solid red;
+		box-shadow: 10px 10px 5px crimson;
+		background-color: rgba(178,34,34, 0.2);
 	}
 }
