updated component page

--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -39,8 +39,6 @@
                                     <a href="#" data-toggle="collapse" data-target="#menu_generic" data-parent="#component_menu" class="collapsed">
                                         <h4>
 										CLARIAH Components
-										<br>
-										<small>Choose <span class="caret"></span></small>
 										</h4>
                                     </a>
                                     <div class="collapse" id="menu_generic" style="height: 0px;">
@@ -53,7 +51,7 @@
                                 <!-- Collection components -->
                                 <li>
                                     <a href="#" data-toggle="collapse" data-target="#menu_collection" data-parent="#component_menu" class="collapsed">
-                                        <span class="glyphicon glyphicon-cloud"></span>Collection<span class="caret pull-right"></span>
+                                        <span class="glyphicon glyphicon-asterisk"></span>Collection<span class="caret pull-right"></span>
                                     </a>
                                     <div class="collapse in" id="menu_collection">
                                         <ul class="nav nav-list">
@@ -66,7 +64,7 @@
                                 <!-- Search components -->
                                 <li class="active">
                                     <a href="#" data-toggle="collapse" data-target="#menu_search" data-parent="#component_menu" class="collapsed">
-                                        <span class="glyphicon glyphicon-inbox"></span> Search <span class="caret pull-right"></span>
+                                        <span class="glyphicon glyphicon-search"></span> Search <span class="caret pull-right"></span>
                                     </a>
                                     <div class="collapse in" id="menu_search">
                                         <ul class="nav nav-list">
@@ -76,24 +74,10 @@
                                     </div>
                                 </li>
 
-                                <!-- Annotation components -->
-                                <li class="active">
-                                    <a href="#" data-toggle="collapse" data-target="#menu_annotation" data-parent="#component_menu" class="collapsed">
-                                        <span class="glyphicon glyphicon-inbox"></span> Annotation <span class="caret pull-right"></span>
-                                    </a>
-                                    <div class="collapse in" id="menu_annotation">
-                                        <ul class="nav nav-list">
-                                            <li><a href="#" onclick="showComponent('Commenting')">Commenting</a></li>
-                                            <li><a href="#" onclick="showComponent('Classifying')">Classifying</a></li>
-                                            <li><a href="#" onclick="showComponent('Linking')">Linking</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-
                                 <!-- Play-out components -->
                                 <li class="active">
                                     <a href="#" data-toggle="collapse" data-target="#menu_playout" data-parent="#component_menu" class="collapsed">
-                                        <span class="glyphicon glyphicon-inbox"></span> Play-out <span class="caret pull-right"></span>
+                                        <span class="glyphicon glyphicon-play"></span> Play-out <span class="caret pull-right"></span>
                                     </a>
                                     <div class="collapse in" id="menu_playout">
                                         <ul class="nav nav-list">
@@ -106,10 +90,24 @@
                                     </div>
                                 </li>
 
+                                <!-- Annotation components -->
+                                <li class="active">
+                                    <a href="#" data-toggle="collapse" data-target="#menu_annotation" data-parent="#component_menu" class="collapsed">
+                                        <span class="glyphicon glyphicon-comment"></span> Annotation <span class="caret pull-right"></span>
+                                    </a>
+                                    <div class="collapse in" id="menu_annotation">
+                                        <ul class="nav nav-list">
+                                            <li><a href="#" onclick="showComponent('Commenting')">Commenting</a></li>
+                                            <li><a href="#" onclick="showComponent('Classifying')">Classifying</a></li>
+                                            <li><a href="#" onclick="showComponent('Linking')">Linking</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+
                                 <!-- Data visualisation components -->
                                 <li class="active">
                                     <a href="#" data-toggle="collapse" data-target="#menu_visuals" data-parent="#component_menu" class="collapsed">
-                                        <span class="glyphicon glyphicon-inbox"></span> Data visualisations <span class="caret pull-right"></span>
+                                        <span class="glyphicon glyphicon-stats"></span> Data visualisations <span class="caret pull-right"></span>
                                     </a>
                                     <div class="collapse in" id="menu_visuals">
                                         <ul class="nav nav-list">
