--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,8 +18,8 @@
 <div class="container">
 	<br>
 	<h1 class="text-center">
-		Welcome to L A B O<br>
-		<small>We've put up some things for you to try</small>
+		Welcome to the CLARIAH Media Suite<br>
+		<small></small>
 	</h1>
 	<br>
 
@@ -27,12 +27,12 @@
 		<div id="3" class="col-sm-6 col-md-4 card-wrapper">
 			<div class="well labs-well labs-goto" onclick="gotoPage('recipes')">
 				<h3><i class="fa fa-link"></i>&nbsp;Recipes</h3>
-				Try one of the predefined recipes
+				Try one of the predefined recipes, based on existing media studies use cases
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-8">
 			<div class="well labs-well">
-				Based on the available components, LABO also offers a way of defining recipes using components, a.k.a. functionalities, as ingredients.
+				Recipes basically consist of a number of functionalities, 'ingredients', with a particular configuration suited for your type of research.
 			</div>
 		</div>
 
@@ -42,12 +42,12 @@
 		<div id="3" class="col-sm-6 col-md-4">
 			<div class="well labs-well labs-goto" onclick="gotoPage('components')">
 				<h3><i class="fa fa-video-camera"></i>&nbsp;Functionalities</h3>
-				Check out our useful components
+				Visit the component library and try out the available functionalities
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-8">
 			<div class="well labs-well">
-				In LABO each functionality for the end-user is available in the form of a UI component, check out the components page to see what we have to offer.
+				Each functionality in the media suite stands on it's own and can be combined with others to form recipes. Recipes can be created by either configuring recipes in your user space or by downloading the component library to be used in your own HTML/Javascript page
 			</div>
 		</div>
 	</div>
@@ -55,13 +55,13 @@
 	<div class="row">
 		<div id="2" class="col-sm-6 col-md-4">
 			<div class="well labs-well labs-goto" onclick="gotoPage('apis')">
-				<h3><i class="fa fa-plug"></i></span>&nbsp;Try out different APIs</h3>
-				Currently we have APIs for search, entity extraction and speech recognition
+				<h3><i class="fa fa-plug"></i></span>&nbsp;APIs</h3>
+				If you're up for it, use our APIs to build your own functionalities
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-8">
 			<div class="well labs-well">
-				We're implementing several services that do stuff with our catalogue or can process different kinds of data. Each of these services have APIs which you can try out here. So far we have search, entity extraction and speech recogntion. We plan to have many more APIs in the near future, also exposing services for face recognition and recommendation software.
+				Currently the CLARIAH infrastructure exposes two APIs: 1) the search API for searching through all of the collections imported from CKAN and 2) the annotation API, which allows you to store and retrieve any annotations made within the CLARIAH media studies infrastructure.
 			</div>
 		</div>
 	</div>
@@ -73,16 +73,12 @@
 
 	<div class="text-center home-footer">
 		<h3>
-			For more information on Sound and Vision Labs, please visit our new
-			<a href="http://blofeld.beeldengeluid.nl:7000" target="_benglabs">site</a>
+			See the available datasets in our CKAN
+			<a href="http://52.89.136.166/" target="_ckan">instance</a>
 		</h3>
 		<h3>
-			Read more on the current status of LABO
-			<a href="https://sites.google.com/a/beeldengeluid.nl/labsteam" target="_labo">here</a>
-		</h3>
-		<h3>
-			For more information on Sound and Vision R&amp;D, please visit our
-			<a href="http://labs.beeldengeluid.nl" target="_benglabs">site</a>
+			Read more on the CLARIAH project
+			<a href="http://www.clariah.nl/" target="_clariah">site</a>
 		</h3>
 		<br>
 		<br>
