--- a/src/templates/default/recipes.html
+++ b/src/templates/default/recipes.html
@@ -7,7 +7,7 @@
 <body>
 
 {% with page='recipes' %}
-{% include 'nav.html' %}
+{% include '%s/nav.html' % template %}
 {% endwith %}
 
 	<div class="container">
