--- a/src/templates/default/about.html
+++ b/src/templates/default/about.html
@@ -12,7 +12,7 @@
 <body>
 
 {% with page='about', loggedIn=loggedIn, user=user %}
-{% include 'nav.html' %}
+{% include '%s/nav.html' % template %}
 {% endwith %}
 
 <div class="container">
@@ -36,7 +36,7 @@
 
 			<div class="well labs-well">
 				<div class="text-center">
-					<img src="/static/images/whiteboard.png" alt="whiteboard">
+					<img src="{{pageImage}}" alt="About">
 				</div>
 			</div>
 		</div>
