--- a/src/templates/default/apis.html
+++ b/src/templates/default/apis.html
@@ -12,7 +12,7 @@
 <body>
 
 {% with page='apis' %}
-{% include 'nav.html' %}
+{% include '%s/nav.html' % template %}
 {% endwith %}
 
 <div class="container">
