--- a/src/templates/default/nav.html
+++ b/src/templates/default/nav.html
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/"><img src="/static/images/labo-logo.png" alt="DIVE"></a>
+			<a class="navbar-brand" href="/"><img src="{{navbarLogo}}" alt="{{template}}"></a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
