--- a/src/templates/default/recipe.html
+++ b/src/templates/default/recipe.html
@@ -8,7 +8,7 @@
 <body>
 
 {% with page='recipes' %}
-{% include 'nav.html' %}
+{% include '%s/nav.html' % template %}
 {% endwith %}
 
 	<div class="container">
