now the recipes are derived from the instance name

--- a/src/templates/default/about.html
+++ b/src/templates/default/about.html
@@ -12,7 +12,7 @@
 <body>
 
 {% with page='about', loggedIn=loggedIn, user=user %}
-{% include '%s/nav.html' % template %}
+{% include '%s/nav.html' % navbarDir %}
 {% endwith %}
 
 <div class="container">
