--- a/src/templates/default/components.html
+++ b/src/templates/default/components.html
@@ -11,7 +11,7 @@
 <body>
 
     {% with page='components' %}
-    {% include '%s/nav.html' % template %}
+    {% include '%s/nav.html' % navbarDir %}
     {% endwith %}
 
     <!-- https://medium.com/wdstack/bootstrap-sidebar-examples-e363021395ff#.uu0l1xx9d -->
