--- a/src/templates/default/contact.html
+++ b/src/templates/default/contact.html
@@ -12,7 +12,7 @@
 <body>
 
 {% with page='contact' %}
-{% include '%s/nav.html' % template %}
+{% include '%s/nav.html' % navbarDir %}
 {% endwith %}
 
 <div class="container">
