now it's possible to properly override styles for an instance

--- a/src/static/sass/default/_bootstrap-overrides.scss
+++ b/src/static/sass/default/_bootstrap-overrides.scss
@@ -5,6 +5,6 @@ $navbar-margin-bottom: 0px;
 
 /* This is needed for the glyphicons to work */
 
-$icon-font-path: "../node_modules/bootstrap-sass/assets/fonts/bootstrap/" !default;
+$icon-font-path: "../../node_modules/bootstrap-sass/assets/fonts/bootstrap/" !default;
 
 /* Further overrides */
