--- a/src/templates/default/recipes.html
+++ b/src/templates/default/recipes.html
@@ -1,6 +1,6 @@
 <head>
 	<title>L A B O - Recipes</title>
-	<link rel="stylesheet" href="/static/css/main.css">
+	<link rel="stylesheet" href="/static/css/default/main.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
