--- a/src/static/sass/default/components.scss
+++ b/src/static/sass/default/components.scss
@@ -1,5 +1,5 @@
 @import "_bootstrap-overrides.scss";
-@import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "_variables.scss";
 @import "_home.scss";
 @import "_searchkit.scss";
