--- a/src/templates/default/404.html
+++ b/src/templates/default/404.html
@@ -1,6 +1,6 @@
 <head>
 	<title>L A B O - Page does not exist</title>
-	<link rel="stylesheet" href="/static/css/main.css">
+	<link rel="stylesheet" href="/static/css/default/main.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -17,7 +17,7 @@
 
 					<div class="row text-center">
 						<div class="dashboard-header">
-							<h3>Sorry the page you were looking for does not exist</h3>
+							<h3>The page you were looking for does not exist</h3>
 						</div>
 					</div>
 				</div>
