--- a/src/templates/default/about.html
+++ b/src/templates/default/about.html
@@ -5,7 +5,7 @@
 
 <head>
 	<title>L A B O - About</title>
-	<link rel="stylesheet" href="/static/css/main.css">
+	<link rel="stylesheet" href="/static/css/default/main.css">
 </head>
 
 
