--- a/src/templates/default/apis.html
+++ b/src/templates/default/apis.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>L A B O - APIs</title>
-	<link rel="stylesheet" href="/static/css/main.css">
+	<link rel="stylesheet" href="/static/css/default/main.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
