--- a/src/templates/default/components.html
+++ b/src/templates/default/components.html
@@ -4,7 +4,7 @@
 <head>
     <title>L A B O - Components</title>
     <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
-    <link rel="stylesheet" href="/static/css/components.css">
+    <link rel="stylesheet" href="/static/css/default/components.css">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
