--- a/src/templates/default/components.html
+++ b/src/templates/default/components.html
@@ -38,7 +38,7 @@
                                 <li class="active">
                                     <a href="#" data-toggle="collapse" data-target="#menu_generic" data-parent="#component_menu" class="collapsed">
                                         <h4>
-										CLARIAH Components
+										Available Components
 										</h4>
                                     </a>
                                     <div class="collapse" id="menu_generic" style="height: 0px;">
