--- a/src/templates/default/recipes.html
+++ b/src/templates/default/recipes.html
@@ -22,7 +22,7 @@
 				<div id="{{recipes[key].id}}" class="col-sm-6 col-md-4 api">
 					<div class="card">
 						<a href="/recipe/{{recipes[key].id}}">
-							<img src="/static/images/BG-tile.jpeg">
+							<img src="/static/images/default/recipe-tile.jpeg">
 						</a>
 						<div class="caption">
 							<h4 class="bengfont"><i class="fa fa-rocket"></i>&nbsp;{{recipes[key].name}}</h4>
