--- a/src/templates/default/components.html
+++ b/src/templates/default/components.html
@@ -49,7 +49,7 @@
                                 </li>
 
                                 <!-- Collection components -->
-                                <li>
+                                <li class="active">
                                     <a href="#" data-toggle="collapse" data-target="#menu_collection" data-parent="#component_menu" class="collapsed">
                                         <span class="glyphicon glyphicon-asterisk"></span>Collection<span class="caret pull-right"></span>
                                     </a>
